Render webview with React

--- a/src/webview/index.less
+++ b/src/webview/index.less
@@ -1,10 +1,10 @@
-.page {
-  .substyle {
-    background: red;
-  }
-}
+// .page {
+//   .substyle {
+//     background: red;
+//   }
+// }
 
-body {
-  color: green;
-  background: powderblue;
-}
+// body {
+//   color: green;
+//   background: powderblue;
+// }
