--- a/src/colors.less
+++ b/src/colors.less
@@ -68,6 +68,13 @@
 @color-radial-menu-hover-border: var(--vscode-button-border);
 @color-radial-menu-hover-icon: var(--vscode-button-foreground);
 
+///// TOOLBAR /////
+
+@color-toolbar-background: var(--vscode-button-background);
+@color-toolbar-foreground: var(--vscode-button-foreground);
+@color-toolbar-active-background: var(--vscode-button-hoverBackground);
+@color-toolbar-active-foreground: var(--vscode-button-foreground);
+
 ///// DATA PROVIDER /////
 
 @color-drop-target-border: var(--vscode-editorLineNumber-foreground);
