--- a/src/colors.less
+++ b/src/colors.less
@@ -68,6 +68,12 @@
 @color-radial-menu-hover-border: var(--vscode-button-border);
 @color-radial-menu-hover-icon: var(--vscode-button-foreground);
 
+///// SEARCH /////
+
+@color-search-input-background: var(--vscode-input-background);
+@color-search-input-foreground: var(--vscode-input-foreground);
+@color-search-input-placeholder: var(--vscode-input-placeholderForeground);
+
 ///// TOOLBAR /////
 
 @color-toolbar-background: var(--vscode-button-background);
