--- a/src/webview/index.less
+++ b/src/webview/index.less
@@ -1,10 +1,11 @@
-// .page {
-//   .substyle {
-//     background: red;
-//   }
-// }
+.c-parse-errors {
+  margin: 20vh auto;
+  width: 400px;
+  text-align: center;
 
-// body {
-//   color: green;
-//   background: powderblue;
-// }
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+}
